--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "mongoose": "^5.5.2"
+    "i": "^0.3.6",
+    "mongoose": "^5.5.2",
+    "npm": "^6.10.1"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
@@ -24,7 +26,7 @@
     "@types/helmet": "0.0.43",
     "@types/mongoose": "^5.3.26",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^11.13.6",
+    "@types/node": "^11.13.18",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
     "typescript": "^3.4.4"
