--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "nodemon ./dist/server.js",
     "start": "tsc && node ./dist/server.js"
   },
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.10.0"
+  },
   "author": "Ron Alonzo <alonzo.ronald@gmail.com> (www.webicultores.com)",
   "license": "MIT",
   "dependencies": {
@@ -15,9 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "i": "^0.3.6",
-    "mongoose": "^5.5.2",
-    "npm": "^6.10.1"
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.2"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
