--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": "6.10.0"
   },
   "author": "Ron Alonzo <alonzo.ronald@gmail.com> (www.webicultores.com)",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
