--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ts": "tsc -w",
     "dev": "nodemon ./dist/server.js",
-    "start": "tsc && node ./dist/server.js"
+    "start": "node dist/server.js",
+    "heroku-postbuild": "tsc"
   },
   "engines": {
     "node": "10.16.0",
