--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.5.2"
+    "mongoose": "^5.5.2",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
@@ -31,7 +32,6 @@
     "@types/mongoose": "^5.3.26",
     "@types/morgan": "^1.7.35",
     "@types/node": "^11.13.18",
-    "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
     "typescript": "^3.4.4"
   }
