--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "ts": "tsc -w",
     "dev": "nodemon ./dist/server.js",
-    "start": "node dist/server.js",
+    "start": "node ./dist/server.js",
+    "start:dev": "nodemon",
+    "build": "tsc",
     "heroku-postbuild": "tsc"
   },
   "engines": {
     "node": "10.16.0",
     "npm": "6.10.0"
   },
-  "author": "Ron Alonzo <alonzo.ronald@gmail.com> (www.webicultores.com)",
+  "author": "Ron Alonzo <alonzo.ronald@gmail.com> (ron-alonzo.web.app)",
   "license": "MPL-2.0",
   "dependencies": {
     "compression": "^1.7.4",
@@ -32,7 +34,8 @@
     "@types/mongoose": "^5.3.26",
     "@types/morgan": "^1.7.35",
     "@types/node": "^11.13.18",
-    "nodemon": "^1.18.11",
-    "typescript": "^3.4.4"
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   }
 }
