--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "diving-decompression": "^1.0.4",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "moment": "^2.24.0",
